# python_lab4

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  casino.py  constants.py  main.py  simulation.py
src/collections_ext/: casino_balance.py  goose_collection.py  player_collection.py
src/models/: chip.py  goose.py  player.py
tests/: test_casino.py  test_goose.py  test_main.py  test_player.py  test_simulation.py
